Bug 308913 - Misleading icon on notification when denying authorization
Summary: Misleading icon on notification when denying authorization
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: kded-module (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2012-10-24 07:42 UTC by Daniele E. Domenichelli
Modified: 2013-02-15 21:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2012-10-24 07:42:22 UTC
When you deny the authorization to someone you get an "XXXX will not be able to see when you are online" notification, but the icon is the green tick (I think "dialog-ok-apply") and that is quite misleading, when I saw the notification, before reading _not_ in the notification message, I thought that the contact was authorized instead.
Comment 1 Martin Klapetek 2012-10-24 07:49:40 UTC
I remember when designing this, we put the green tick in there as "operation completed successfully" as big red things in cross shape are scary and usually mean "error".
Comment 2 Rohan Garg 2012-10-24 07:52:18 UTC
In my opinion we should show dialog-information in order to inform the user about the result of this action
Comment 3 Daniele E. Domenichelli 2012-10-24 08:05:29 UTC
What about "list-remove-user" (and perhaps change also the icon for success to "list-add-user")
The green tick is the same used for the "Approve" action icon, so it's really misleading.
Comment 4 Martin Klapetek 2012-10-24 08:11:59 UTC
That depends on what the icon should actually show. I never saw it as misleading because I always thought about it as "operation completed". However I'm fine with changing it to either "list-remove-user" or "dialog-information" (and if it will be changed, change the "approved" one as well).
Comment 5 David Edmundson 2012-10-25 15:43:43 UTC
change to dialog-information
Comment 6 Andrea Scarpino 2013-02-07 12:57:14 UTC
Git commit b8980fd4c336d6deda852d2dcbb96d6c31a85b4a by Andrea Scarpino.
Committed on 07/02/2013 at 13:56.
Pushed by scarpino into branch 'master'.

Fix misleading icon on notification when denying authorization

M  +1    -1    contact-request-handler.cpp

http://commits.kde.org/telepathy-kded-module/b8980fd4c336d6deda852d2dcbb96d6c31a85b4a