Fix misleading icon on notification when denying authorization

BUG: 308913